Trying to add endpoints to GH page. test 1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 </head>
 <body>
 
-<h1>Hello World</h1>
+    <h1>Hello World</h1>
+    <h2>Endpoints</h2></br>
+    <a href="">/hatch (dead link for now)</a></br>
+    <a href="">/mutateChicken (dead link for now)</a></br>
+    <a href="">/decapitate (dead link for now)</a></br><a href="http://192.168.44.18:8000/getChicken/chk-101">/getChicken</a></br>
+    <a href="http://localhost:8000/getAllChickens">/getAllChickens</a></br>
+    <a href="http://localhost:8000/easterEgg">/easterEgg</a>
+
 
 </body>
 </html>
