set up hatch endpoint. testing on remote

--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>EGG</title>
+    <title>EGG</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div id = "btnPanel">
+        <h1>WELCOME TO THE <s>THUNDER</s> EGGDOME</h1></br></br>
+        <h2>Endpoints</h2></body></br>
+        <button id="hatch">/hatch</button></br>
+        <a href="">/mutateChicken (dead link for now)</a></br>
+        <a href="">/decapitate (dead link for now)</a></br><a href="http://192.168.44.18:8000/getChicken/chk-101">/getChicken</a></br>
+        <a href="http://localhost:8000/getAllChickens">/getAllChickens</a></br>
+        <a href="http://localhost:8000/easterEgg">/easterEgg</a>
+    </div>
+    <div id="dataPanel">
+        <div id="formWindow">
 
-    <h1>Hello World</h1>
-    <h2>Endpoints</h2></br>
-    <a href="">/hatch (dead link for now)</a></br>
-    <a href="">/mutateChicken (dead link for now)</a></br>
-    <a href="">/decapitate (dead link for now)</a></br><a href="http://192.168.44.18:8000/getChicken/chk-101">/getChicken</a></br>
-    <a href="http://localhost:8000/getAllChickens">/getAllChickens</a></br>
-    <a href="http://localhost:8000/easterEgg">/easterEgg</a>
+        </div>
+        <div id="resultWindow">
 
+        </div>
+    </div>
 
 </body>
 </html>
