modified template filler data for hatch req

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <h1>WELCOME TO THE <s>THUNDER</s> EGGDOME</h1></br></br>
         <h2>Endpoints</h2></body></br>
         <button id="hatch">/hatch</button></br>
-        <a href="">/mutateChicken (dead link for now)</a></br>
-        <a href="">/decapitate (dead link for now)</a></br><a href="http://192.168.44.18:8000/getChicken/chk-101">/getChicken</a></br>
-        <a href="http://localhost:8000/getAllChickens">/getAllChickens</a></br>
-        <a href="http://localhost:8000/easterEgg">/easterEgg</a>
+        <button id="mutateChicken">/mutateChicken</button></br>
+        <button id="decapitate">/decapitate</button></br>
+        <button id="getChicken">/getChicken</button></br>
+        <button id="getAllChickens">/getAllChickens</button></br>
+        <button id="easterEgg">/easterEgg</button></br>
     </div>
     <div id="dataPanel">
         <div id="formWindow">
